update of README

--- a/README
+++ b/README
@@ -1,6 +1,10 @@
        README
 ====================
 
+Author: Erik Eloff, 2009-2010
+
+Enjoy!
+
 This vim configuration contains the following stuff:
 
 * Sparkup
